--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,12 @@ subprojects {
 		mavenCentral()
 	}
 
+	test {
+		testLogging {
+			showStandardStreams = true
+		}
+	}
+
 	dependencies {
 		compileOnly "org.projectlombok:lombok:${lombokVersion}"
 		annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
