--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ subprojects {
 	test {
 		testLogging {
 			showStandardStreams = true
+			events "passed", "skipped", "failed", "standardOut", "standardError"
 		}
 	}
 
