--- a/websocket-server/build.gradle
+++ b/websocket-server/build.gradle
@@ -12,5 +12,6 @@ jar {
 
 dependencies {
     implementation 'io.netty:netty-all:4.1.50.Final'
+    testImplementation 'org.hamcrest:hamcrest:2.1'
     testImplementation 'junit:junit:4.13'
 }
