--- a/clients-test/build.gradle
+++ b/clients-test/build.gradle
@@ -15,7 +15,7 @@ dependencies {
 	implementation project(':websocket-server') // import models, json support
 
 	implementation 'io.netty:netty-all:4.1.50.Final' // Netty
-	// implementation 'org.springframework.boot:spring-boot-starter-webflux' // Spring ReactorNettyWebSocketClient
+	implementation 'org.springframework.boot:spring-boot-starter-webflux' // Spring ReactorNettyWebSocketClient
 
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
