--- a/clients-test/build.gradle
+++ b/clients-test/build.gradle
@@ -18,6 +18,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux' // Spring ReactorNettyWebSocketClient
 	implementation 'org.eclipse.jetty.websocket:websocket-client:9.4.28.v20200408' // Jetty
 
+	// Akka HTTP
+	implementation 'com.typesafe.akka:akka-http_2.13:10.1.12'
+	implementation 'com.typesafe.akka:akka-stream_2.13:2.6.5'
 
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
