--- a/clients-test/build.gradle
+++ b/clients-test/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	implementation 'com.typesafe.akka:akka-http_2.13:10.1.12'
 	implementation 'com.typesafe.akka:akka-stream_2.13:2.6.5'
 
+	implementation 'org.asynchttpclient:async-http-client:2.12.1' // AsyncHttpClient
+
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
