com.neovisionaries.ws.client.WebSocket

--- a/clients-test/build.gradle
+++ b/clients-test/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
 	implementation 'org.asynchttpclient:async-http-client:2.12.1' // AsyncHttpClient
 	implementation 'org.java-websocket:Java-WebSocket:1.5.1' // Java-WebSocket
+	implementation 'com.neovisionaries:nv-websocket-client:2.9' // com.neovisionaries.ws.client.WebSocket
 
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
